# make_todoist_tasks_from_udemy

./: README.md  make_tasks.py  pyproject.toml
